--- a/main/api/v1/static/style.css
+++ b/main/api/v1/static/style.css
@@ -3,6 +3,29 @@
 ::before {
     box-sizing: border-box;
 }
+
+
+.task-link {
+  text-decoration: none; /* Remove underline from the link */
+}
+
+.task-button {
+  padding: 12px 32px;
+
+  border-radius: 4px;
+  border: none;
+
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+  background: #ffffff;
+  color: black;
+
+  text-align: center;
+  /* font-weight: bold; */
+  font-size: 14px;
+  cursor: pointer;
+}
+
+
 body {
 
     font-family: 'Poppins', sans-serif;
@@ -12,6 +35,11 @@ body {
     background-size: cover;
     background: #A46C6C;
 }
+
+.ml-auto {
+  margin-left: 400px;
+}
+
 nav {
   padding: 10px;
   text-align: center;
