--- a/main/api/v1/templates/task.html
+++ b/main/api/v1/templates/task.html
@@ -26,7 +26,7 @@
         <aside id="sidebar">
             <div class="h-100">
                 <div class="sidebar-logo">
-                    <a href="#">TaskFlow</a>
+                    <a href="/home">TaskFlow</a>
                 </div>
                 <!-- Sidebar Navigation -->
                 <ul class="sidebar-nav">
@@ -40,6 +40,22 @@
                         </a>
                     </li>
                     
+                    
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link collapsed" data-bs-toggle="collapse" data-bs-target="#mem"
+                            aria-expanded="false" aria-controls="auth">
+                            <i class="fa-regular fa-user pe-2"></i>
+                            Members
+                        </a>
+                        <ul id="mem" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                            {% for member in members %}
+                            <li class="sidebar-item">
+                                <p class="sidebar-link">{{member.name}}</p>
+                            </li>
+                            {% endfor %}
+                            
+                        </ul>
+                    </li>
                     <li class="sidebar-header">
                         other
                     </li>
@@ -73,14 +89,10 @@
                         <a class="sidebar-link" href="#" data-toggle="modal" data-target="#JoinModal">Join</a>
 
                     </li>
-                    <li class="sidebar-item ">
-                        <a class="sidebar-link" href="#" data-toggle="modal" data-target="#DeleteModal">Delete</a>
-
-                    </li>
                 </ul>
             </div>
             <!-- Bootstrap Modal -->
-            
+
         </aside>
         <!-- Main Component -->
        
@@ -97,32 +109,51 @@
             </nav>
             <main class="content px-3 py-2">
                 <div class="container-fluid">
-                  <h3>My Private Safe Space : {{private.name}}</h3>
-                      <form id="todo-form">
-                        <input type="text" placeholder="New TODO..." id="todo-input" name="todo-input"/>
-                        <button type="submit">Add +</button>
-                      </form>
-                      <div class="lanes">
-                        <div class="swim-lane" id="todo-lane">
-                          <h3 class="heading">TODO</h3>
-                          {% for task in tasks %}
-                            <a href="{{ url_for('app_views.task', task_id=task.id) }}" class="task-link" draggable="true">
-                                <div class="task-button">
-                                    {{ task.title }}
-                                </div>
-                            </a>
-                            {% endfor %}
+                    <div class="task-details">
+                        <h2 class="task-title">{{task_infos.title}}</h2>
+                        <div class="task-info">
+                            <div class="info-item">
+                                <i class="fas fa-user"></i>
+                                <span>Attributed To:</span>
+                                {{member_infos.name}} - {{member_infos.email}}
+                            </div>
+                            <div class="info-item">
+                                <i class="fas fa-sitemap"></i>
+                                <span>Part of Workspace:</span>
+                                {{wsp_infos.name}} Owned By {{owner.name}} - {{owner.email}}
+                            </div>
+                            <div class="info-item">
+                                <i class="fas fa-calendar-alt"></i>
+                                <span>Task Assigned At:</span>
+                                {{task_infos.start_date}}
+                            </div>
+                            <div class="info-item">
+                                <i class="fas fa-calendar-times"></i>
+                                <span>Due Date:</span>
+                                {{task_infos.due_date}}
+                            </div>
+                            <div class="info-item">
+                                <i class="fas fa-exclamation-circle"></i>
+                                <span>Priority:</span>
+                                {{task_infos.priority}}
+                            </div>
                         </div>
-                        <div class="swim-lane">
-                          <h3 class="heading">Doing</h3>
-                        </div>
-                        <div class="swim-lane">
-                          <h3 class="heading">Done</h3>
-                          
+                        <div class="description">
+                            <h4>Description:</h4>
+                            <p>{{task_infos.description}}</p>
                         </div>
                     </div>
                 </div>
+                <div>
+                    <form method="POST" action="{{url_for('app_views.task', task_id=task_infos.id)}}" class ="modal-body" id="myForm3">
+                        <input type="hidden" name="action" value="deltask">
+                        <button type="submit" class="btn btn-secondary" form="myForm3">Delete</button>
+                    </form>
+                </div>
             </main>
+
+            
+            
         </div>
     </div>
      <!-- Create Modal -->
@@ -137,17 +168,17 @@
                 </div>
                 
                 <!-- Modal Body -->
-                <form method="POST" action="/home" class ="modal-body" id="myForm">
-                    <input type="hidden" name="action" value="addworksp">
+                <form class ="modal-body" id="myForm">
                     <label for="userInput">Name your workspace:</label>
-                    <input type="text" id="userInput" name="name">
+                    <input type="text" id="userInput" name="userInput">
                 </form> 
                 
                 <!-- Modal Footer -->
                 <div class="modal-footer">
                     <!--a button to view a workspace-->
-                    <button form="myForm" type="button" class="btn btn-secondary" data-dismiss="modal">Create</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Create</button>
                 </div>
+                
             </div>
         </div>
     </div>
@@ -163,16 +194,15 @@
                 </div>
                 
                 <!-- Modal Body -->
-                    <form method="POST" action="/home" class ="modal-body" id="myForm2">
-                        <input type="hidden" name="action" value="joinworksp">
+                    <form class ="modal-body" id="myForm">
                         <label for="userInput">Enter Code:</label>
-                        <input type="text" id="userInput" name="name">
+                        <input type="text" id="userInput" name="userInput">
                     </form> 
                 
                 <!-- Modal Footer -->
                 <div class="modal-footer">
                     <!--a button to view a workspace-->
-                    <button type="button" class="btn btn-secondary" form="myForm2" data-dismiss="modal">Join</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Join</button>
                 </div>
                 
             </div>
@@ -205,72 +235,20 @@
             </div>
         </div>
     </div>
-
-    <div class="modal" id="myModal" >
-        <div class="description" >
-            <div class="modal-content">
-            
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Task name</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                
-                <!-- Modal Body -->
-                <form class ="modal-body" id="myForm" method="post">
-                    <div style="display: flex; width: 100%; ">
-                        <label for="due-date" style="padding: 20px;">Start Date:</label>
-                        <input type="date" id="start-date" name="start-date">
-                        
-                        <label for="due-date" style="padding: 20px;">Due Date:</label>
-                        <input type="date" id="due-date" name="due-date">
-                    </div>
-                    
-                    
-                    <div style="display: flex; flex-direction: row;">
-                        <label style="padding: 20px;">
-                        <input type="radio" name="priority" value="low" >
-                        Low Priority
-                        </label>
-                        
-                        <label style="padding: 20px;">
-                        <input type="radio" name="priority" value="medium" >
-                        Medium Priority
-                        </label>
-                        
-                        <label style="padding: 20px;">
-                        <input type="radio" name="priority" value="high" >
-                        High Priority
-                        </label>
-                    </div>
-                    <div>
-                        <label style="padding: 20px;">Description:</label>
-                        <textarea style="margin: 0 20px;" id="message" name="description" rows="5" cols="55"></textarea>
-                    </div>
-                    <input type="hidden" id="todo-title" name="todo-title"> <!-- Hidden input for the title -->
-                    <div class="modal-footer">
-                        <!--a button to view a workspace-->
-                        <button type="submit" class="btn btn-secondary" data-dismiss="modal">Save</button>
-                    </div>
-                    <input type="hidden" value="createtask" name="action">
-                </form>
-                <!-- Modal Footer -->
-            </div>
-        </div>
-    </div>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <script>
+    
     document.getElementById('showListIcon').addEventListener('click', function() {
       var myList = document.getElementById('myList');
       // Toggle the display property
       myList.style.display = (myList.style.display === 'none' || myList.style.display === '') ? 'block' : 'none';
-    });
-    
+    });    
   </script>
 </body>
 
 </html>
+
