--- a/main/api/v1/templates/workspace.html
+++ b/main/api/v1/templates/workspace.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <script src="../static/drag.js" defer></script>
     <script src="../static/todo.js" defer></script>
-    <script src="../static/script.js"></script>
+    <script src="../static/script.js" defer></script>
     <title>Taskflow</title>
 </head>
 
@@ -105,6 +105,7 @@
                 <a href="#">About</a>
                 <a href="#">Services</a>
                 <a href="#">Contact</a>
+                <a href="/logout" id="logoutlink" class="ml-auto">Log Out</a>
             </nav>
             <main class="content px-3 py-2">
                 <div class="container-fluid">
@@ -116,6 +117,13 @@
                     <div class="lanes">
                         <div class="swim-lane" id="todo-lane">
                             <h3 class="heading">TODO</h3>
+                            {% for task in tasks %}
+                            <a href="{{ url_for('app_views.task', task_id=task.id) }}" class="task-link" draggable="true">
+                                <div class="task-button">
+                                    {{ task.title }}
+                                </div>
+                            </a>
+                            {% endfor %}
                         </div>
                         <div class="swim-lane">
                             <h3 class="heading">Doing</h3>
@@ -180,6 +188,34 @@
             </div>
         </div>
     </div>
+
+    <div class="modal" id="DeleteModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Delete a workspace</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                
+                <!-- Modal Body -->
+                    <form method="POST" action="/home" class ="modal-body" id="myForm3">
+                        <input type="hidden" name="action" value="delworksp">
+                        <label for="userInput">Enter Code:</label>
+                        <input type="text" id="userInput" name="code">
+                    </form> 
+                
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <!--a button to view a workspace-->
+                    <button type="submit" class="btn btn-secondary" form="myForm3" data-dismiss="modal">Delete</button>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
     <div class="modal" id="myModal" >
         <div class="description" >
             <div class="modal-content">
@@ -213,7 +249,7 @@
                         {% endfor %}
                     </ul>
                     <input type="hidden" id="selected-member" name="selected-member">
-                    <div style="display: flex; flex-direction: column;">
+                    <div style="display: flex; flex-direction: row;">
                         <label style="padding: 20px;">
                         <input type="radio" name="priority" value="low" >
                         Low Priority
