--- a/main/api/v1/templates/mainLayout.html
+++ b/main/api/v1/templates/mainLayout.html
@@ -19,19 +19,21 @@
                 <i class="fa fa-bars"></i>
             </label>
             <div class="nav-wrapper">
-                <div class = "logo_div">
-                    <a href="/" class="logo">
-                        <label class="logo-style">TaskFlow</label>
-                    </a>
+                <div class="sidebar-logo">
+                    <a href="/">TaskFlow</a>
                 </div>
+                
+                <a class="btn" href="/aboutus">About</a>
+                <a class="btn" href="/contactus">Contact</a>
+            
                 <div class="nav-links sndnavlinks">
                         <ul class="ulspecbtn">
                             <li><a href="/login" class="active">LogIn</a></li>
                             <li><a href="/signup" class="active">Sign Up</a></li>
-                            <li style="width: fit-content;"><a href="/aboutus">About Us</a></li>
                         </ul>
                 </div>
-            </div>
+                </div>
+                
         </nav>
         
         <main>
