--- a/main/api/v1/templates/login.html
+++ b/main/api/v1/templates/login.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 
     <link rel="stylesheet" href="../static/login.css">
-    <title>Boostrap Login | Ludiflex</title>
+    <title>TaskFlow</title>
 </head>
 <body>
     <!----------------------- Main Container -------------------------->
